2010-12-27  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (getTypeMap): Change 'procedure' to
	LangObjType.procedureType.
	* standard/call_with_values.java (apply, apply2): Use new
	LangObjType.coerceToProcedure instead of cast to Procedure.

2010-12-26  Per Bothner  <per@bothner.com>

	* lang/Lambda.java: Recognize and handle function/method annotations.
	(rewriteAnnotations): New method
	(isAnnotationSymbol): New method - to moved object.java.
	* standard/object.java Handle class annotations.
	(isAnnotationSymbol): Moved to Lambda.java.
	(rewriteClassDef): Make use of rewriteAnnotations.

2010-12-24  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Declare 'annotation'.
	(checkDefaultBinding): Map '@NAME' to MakeAnnotation.
	* standard/object.java (scanClassDef): Recognize field annotations.
	(rewriteClassDef): Handle annotations.
	(isAnnotationSymbol): Helper method.

2010-11-20  Jamison Hope <jrh@theptrgroup.com>
	    Per Bothner  <per@bothner.com>

	* standard/require.java (faturemap): Add SRFI-41 features.
	* ImportFromLibrary.java (SRFI97Map): Add SRFI-41 library names.
	(scanForDefinitions): Handle multiple libraries (or sub-libraries)
	for the same SRFI.

2010-11-18  Per Bothner  <per@bothner.com>

	* standard/object.java (scanClassDef): For 'interface:' argument,
	check for SyntaxForm, in case the class definition is macro-generated.

2010-11-14  Per Bothner  <per@bothner.com>

	* lang/Translator.java (pushPositionOf, popPositionOf): Use 'this'
	as special marker, instead of Special.eof, since latter may
	cause some issues with a literal #!eof, at least under Q2.

2010-11-04  Per Bothner  <per@bothner.com>

	* repl.java: Update for new Options#keys which now returns ArrayList.

2010-10-28  Per Bothner  <per@bothner.com>

	* Shell.java (runFileOrClass): Print stack trace if running class
	throws exception.

	* standard/Scheme.java (initScheme): Declare 'define-enum'.
